aws dynamoDB와 연동 (with lambda)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,43 +9,39 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+# ✅ Widgets + Network 모듈 추가
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Network)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Network)
 
 set(PROJECT_SOURCES
-        main.cpp
-        widget.cpp
-        widget.h
-        widget.ui
+    main.cpp
+    widget.cpp
+    widget.h
+    widget.ui
+
+    addressbookmodel.cpp
+    addressbookmodel.h
+    detailpagewidget.h
+    detailpagewidget.cpp
+    addressentry.h
+    util.h
+    mainpagewidget.h
+    mainpagewidget.cpp
+    mainpagewidget.ui
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(AddressBook
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
-
-
-        addressbookmodel.cpp
-        addressbookmodel.h
-        addressbookmodel.cpp
-        detailpagewidget.h
-        detailpagewidget.cpp
-        addressentry.h
-        testAddressBookData.json
-        util.h
-        mainpagewidget.h mainpagewidget.cpp mainpagewidget.ui
+        .env
+        envloader.h
     )
-# Define target properties for Android with Qt 6 as:
-#    set_property(TARGET AddressBook APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
-#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
-# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
         add_library(AddressBook SHARED
             ${PROJECT_SOURCES}
         )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
         add_executable(AddressBook
             ${PROJECT_SOURCES}
@@ -53,11 +49,14 @@ else()
     endif()
 endif()
 
-target_link_libraries(AddressBook PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+# ✅ Qt::Network 모듈도 링크
+target_link_libraries(AddressBook
+    PRIVATE
+        Qt${QT_VERSION_MAJOR}::Widgets
+        Qt${QT_VERSION_MAJOR}::Network
+)
 
-# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
-# If you are developing for iOS or macOS you should consider setting an
-# explicit, fixed bundle identifier manually though.
+# macOS/iOS용 번들 설정
 if(${QT_VERSION} VERSION_LESS 6.1.0)
   set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.AddressBook)
 endif()
@@ -69,6 +68,7 @@ set_target_properties(AddressBook PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
+# 설치 설정
 include(GNUInstallDirs)
 install(TARGETS AddressBook
     BUNDLE DESTINATION .
