add favoirt button & add yes/no png file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ${PROJECT_SOURCES}
         .env
         envloader.h
+        resources.qrc
     )
 else()
     if(ANDROID)
