feat(ui): show "Loading..." dialog during AWS communication (add, delete, save)
- Introduced LoadingDialog to indicate progress during network calls
- Integrated dialog into addEntry(), removeEntry(), and
DetailPageWidget::onSaveClicked()
- Ensures better UX by visually notifying users during potentially
delayed Lambda requests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         envloader.h
         resources.qrc
         heartdelegate.h heartdelegate.cpp
+        loadingdialog.h
     )
 else()
     if(ANDROID)
