- Modified UI layout and widget arrangement - Added FontUpdate class (fontupdate.h/cpp) to apply resource fonts to widgets - FontUpdate enables easy font family changes without altering font size

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,9 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         resources.qrc
         heartdelegate.h heartdelegate.cpp
         loadingdialog.h
+        detailpagewidget.ui
+        fontupdate.h
+        fontupdate.cpp
     )
 else()
     if(ANDROID)
