- 패치 전 임시 저장

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,12 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         detailpagewidget.ui
         fontupdate.h
         fontupdate.cpp
+        ImageEntry.h
+
+
+
+
+
     )
 else()
     if(ANDROID)
